====
News
====

..
  2015-11-XX Version 0.12.2 released
  ==================================

  This is a bugfix release.


  Changes affecting backwards compatibility
  -----------------------------------------

  - ``macros.newLit`` for ``bool`` now produces false/true symbols which
    actually work with the bool datatype.


2015-10-27 Version 0.12.0 released
==================================

The Nim community of developers is proud to announce the new version of the
Nim compiler. This has been a long time coming as the last release has been
made over 5 months ago!

This release includes some changes which affect backwards compatibility,
one major change is that now the hash table ``[]`` operators now raise a
``KeyError`` exception when the key does not exist.

Some of the more exciting new features include: the ability to unpack tuples
in any assignment context, the introduction of `NimScript <docs/nims.html>`_,
and improvements to the type inference of lambdas.

There are of course many many many bug fixes included with this release.
We are getting closer and closer to a 1.0 release and are hoping that only
a few 0.x releases will be necessary before we are happy to release version 1.0.

As always you can download the latest version of Nim from the
`download <download.html>`_ page.

For a more detailed list of changes look below. Some of the upcoming breaking
changes are also documented in this forum
`thread <http://forum.nim-lang.org/t/1708>`_.

Changes affecting backwards compatibility
-----------------------------------------
- ``tables.[]``, ``strtabs.[]``, ``critbits.[]`` **now raise**
  the ``KeyError`` **exception when the key does not exist**! Use the
  new ``getOrDefault`` instead to get the old behaviour. Compile all your
  code with ``-d:nimTableGet`` to get a listing of where your code
  uses ``[]``!
- The ``rawsockets`` module has been renamed to ``nativesockets`` to avoid