@@ -14,6 +14,8 @@ News
 
   - ``macros.newLit`` for ``bool`` now produces false/true symbols which
     actually work with the bool datatype.
+  - when compiling to JS, ``Node``, ``NodeType`` and ``Document`` are no longer
+    defined. Use the types defined in ``dom.nim`` instead.
 
 
 2015-10-27 Version 0.12.0 released
